More to cmake configuration and build work
Continuing to work on cmake configuration and build. Having to
restructure directories because of circular dependencies between
directories.

Tested on os x, configuration works, build does not complete.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,7 +151,8 @@ if (XSDK_WITH_NETCDF)
 #X#  endforeach()
 
   message("-- Enabled support for netcdf.")
-  list(APPEND BETR_TPLS netcdf)
+  list(APPEND BETR_TPLS ${TPL_NETCDF_LIBRARIES})
+  list(APPEND BETR_INCLUDE_DIRS ${TPL_NETCDF_INCLUDE_DIRS})
   set(BETR_HAVE_NETCDF 1)
 else()
   set(BETR_HAVE_NETCDF 0)
