More work on cmake build.
Gave up on trying to resolve dependencies in sclm. Just moving all files is
sclm into a single directory, stub_clm.

Testing: stub_clm, betr_math and betr_core now compile.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${BETR_INCLUDE_DIRS})
 add_subdirectory(shr)
 add_subdirectory(esmf_wrf_timemgr)
-add_subdirectory(sclm)
+add_subdirectory(stub_clm)
 add_subdirectory(betr)
