--- a/src/betr/betr_math/CMakeLists.txt
+++ b/src/betr/betr_math/CMakeLists.txt
@@ -1,6 +1,13 @@
-set(BETR_MATH_SOURCES InterpolationMod.F90 ODEMod.F90 FindRootMod.F90 MathfuncMod.F90)
+set(BETR_MATH_SOURCES
+  FindRootMod.F90
+  InterpolationMod.F90
+  MathfuncMod.F90
+  ODEMod.F90
+  )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
+include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
+
 
 include(add_betr_library)
 add_betr_library(betr_math ${BETR_MATH_SOURCES})
