cmake build system generates an executable
The cmake based build system generates an executable. First pass at new
reorganized beter simulation classes.

Tests: configure and build sbetr executable on os x with gfortran.

--- a/src/betr/CMakeLists.txt
+++ b/src/betr/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(betr_math)
 add_subdirectory(betr_core)
+add_subdirectory(betr_main)
+set(BETR_LIBRARIES betr_math;betr_core;betr_main;${BETR_LIBRARIES} PARENT_SCOPE)
+
