--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(shr)
 add_subdirectory(esmf_wrf_timemgr)
 add_subdirectory(stub_clm)
 add_subdirectory(betr)
+add_subdirectory(driver)
