Start working on reading namelists
Jinyun had hardcoded paths in the clm climate forcing data. These need to be
read from a namelist. started implementation of reading namelist data from the
namelist buffer.

fixed bug in install target.

Test suite: compiled and runs, but namelist is empty.

--- a/src/esmf_wrf_timemgr/CMakeLists.txt
+++ b/src/esmf_wrf_timemgr/CMakeLists.txt
@@ -30,7 +30,7 @@ set(BETR_LIBRARIES betr_esmf;${BETR_LIBRARIES})
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS betr_math DESTINATION lib)
+  install(TARGETS betr_esmf DESTINATION lib)
   file(GLOB HEADERS *.h)
   install(FILES ${HEADERS} DESTINATION include/esmf)
 endif()
