--- a/src/stub_clm/CMakeLists.txt
+++ b/src/stub_clm/CMakeLists.txt
@@ -63,7 +63,7 @@ set(BETR_LIBRARIES betr_stub_clm;${BETR_LIBRARIES})
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS betr_math DESTINATION lib)
+  install(TARGETS betr_stub_clm DESTINATION lib)
   file(GLOB HEADERS *.h)
   install(FILES ${HEADERS} DESTINATION include/stub_clm/main)
 endif()
