--- a/src/betr/CMakeLists.txt
+++ b/src/betr/CMakeLists.txt
@@ -1,5 +1,6 @@
+add_subdirectory(betr_util)
 add_subdirectory(betr_math)
 add_subdirectory(betr_core)
 add_subdirectory(betr_main)
-set(BETR_LIBRARIES betr_math;betr_core;betr_main;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES betr_util;betr_math;betr_core;betr_main;${BETR_LIBRARIES} PARENT_SCOPE)
 
