Introduce 3rd-party directory
Introduce the 3rd-party directory for storing and building third party
libraries that we build automatically as part of a betr build.

Testing: configure builds pfunit, build and manually run sbetr mock ok.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,9 +159,15 @@ else()
 endif()
 
 
+# Other third-party libraries.
+add_subdirectory(3rd-party)
+
 # Include the binary directory in the header file search path,
-# since it's where we place generated files.
+# since it's where we place the third-party libraries.
 include_directories("${PROJECT_BINARY_DIR}")
+include_directories("${PROJECT_BINARY_DIR}/include")
+link_directories("${PROJECT_BINARY_DIR}/lib")
+include_directories(${BETR_INCDIRS})
 
 # Source code itself.
 include_directories("${PROJECT_SOURCE_DIR}")
