--- a/src/betr/betr_main/CMakeLists.txt
+++ b/src/betr/betr_main/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
 
 
 include(add_betr_library)
