--- a/src/betr/betr_standalone_coupler/CMakeLists.txt
+++ b/src/betr/betr_standalone_coupler/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_main)
 
 
 include(add_betr_library)
