Working pfunit test with make test
First working pfunit test runs with 'make test'. The cmake
add_betr_unit_test function needs to be generalized a bit because it
hard codes include paths.

Testing: configure, build, test work on os x. Manually run mock problem
to completion without error.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,13 +169,12 @@ include_directories("${PROJECT_BINARY_DIR}/include")
 link_directories("${PROJECT_BINARY_DIR}/lib")
 include_directories(${BETR_INCDIRS})
 
+# Unit testing.
+enable_testing()
+
 # Source code itself.
 include_directories("${PROJECT_SOURCE_DIR}")
 add_subdirectory(src)
-
-# Unit testing.
-#X#enable_testing()
-#X#add_subdirectory(unit_tests)
 
 # Drivers for benchmarks.
 #X#add_subdirectory(drivers)
