--- a/src/betr/betr_math/tests/CMakeLists.txt
+++ b/src/betr/betr_math/tests/CMakeLists.txt
@@ -3,6 +3,6 @@ add_pfunit_sources(MATHFUNC_SRCS test_betr_mathfunc.pfunit)
 
 configure_file(testSuites.inc testSuites.inc COPYONLY)
 
-include(add_betr_unit_test)
-add_betr_unit_test(test_betr_mathfunc ${MATHFUNC_SRCS})
+include(add_betr_pfunit_test)
+add_betr_pfunit_test(test_betr_mathfunc ${MATHFUNC_SRCS})
 
