Initial working implementation of BeTRSimulationCLM
Initial working implementation of the BeTRSimulationCLM class. Contains
a lot of duplicate code that will be removed when consolidating the
simulation classes. Several functions are called by clm and will
eventually be removed and put into the clm side of the interface.

Testing: mac os x config, build, test ok.
         runs standalone mock and clm mock to completion, no numerical
           differences with reference output.

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -2,6 +2,7 @@ set(BETR_DRIVER_SOURCES
   BeTRSimulation.F90
   BeTRSimulationFactory.F90
   BeTRSimulationStandalone.F90
+  BeTRSimulationCLM.F90
   ReactionsFactoryStandalone.F90
   BGCReactionsMockRunType.F90
   PlantSoilBGCMockRunType.F90
