Create single ReactionFactory shared by clm and standalone
Create a single BeTR Reactions Factory class that is shared by clm and
standalone simulations.

Testing: mac os x, configure, build, tests pass
         clm and standalone mock problems run, no numerical differences
         with reference output.

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -3,7 +3,7 @@ set(BETR_DRIVER_SOURCES
   BeTRSimulationFactory.F90
   BeTRSimulationStandalone.F90
   BeTRSimulationCLM.F90
-  ReactionsFactoryStandalone.F90
+  ReactionsFactory.F90
   BGCReactionsMockRunType.F90
   PlantSoilBGCMockRunType.F90
   CLMForcType.F90
