--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(BETR_UTIL_SOURCES
   betr_constants.F90
+  BeTR_decompMod.F90
+  betr_varcon.F90
   )
-
+include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include(add_betr_library)
 add_betr_library(betr_util ${BETR_UTIL_SOURCES})
 
