Move BGCReactionMod and PlantSoilBGCMod into rxns subdir.
Move the BGCReactions and PlantSoilBGC base classes into the rxns sub directory
for a more consistent layout.

Testing: OS X configure, build, test : pass
         standalone-mock : runs to completion, no numerical diffs
         clm-mock : runs to completion, no numerical diffs
         standalone-h2oiso : bulk h2o advection mass balance error
         clm-h2oiso : bulk h2o advection mass balance error

--- a/src/betr/betr_main/CMakeLists.txt
+++ b/src/betr/betr_main/CMakeLists.txt
@@ -1,7 +1,5 @@
 set(BETR_MAIN_SOURCES
-  BGCReactionsMod.F90
   BetrBGCMod.F90
-  PlantSoilBGCMod.F90
   TracerBalanceMod.F90
   )
 
@@ -11,6 +9,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_rxns)
 
 
 include(add_betr_library)
