introduce betr_ctrl.F90 for global betr control
Removed some redundant logical switches in tracer_varcon, and move
global logical switches to betr_ctrl. betr_ctrl will be used
to replace clm_varctl in comingup revisions.

Test: OS X configure, build, test: pass
standalone-mock : run to completion, no numerical diffs

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -2,6 +2,7 @@ set(BETR_UTIL_SOURCES
   betr_constants.F90
   BeTR_decompMod.F90
   betr_varcon.F90
+  betr_ctrl.F90
   )
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include(add_betr_library)
