removed the shr dependency in betr
renamed necessary shr files with a prefix b.
This allow compiling code under betr direcotry without
invoking shr. However, special care is needed when mpi
is eventually enabled. This may require some use of macros

Testing: OS X configure, build, test: pass
  standalone-mock : runs to completion, no numerical diffs
  clm-mock: runs to completion, no numerical diffs

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -3,8 +3,23 @@ set(BETR_UTIL_SOURCES
   BeTR_decompMod.F90
   betr_varcon.F90
   betr_ctrl.F90
+  bshr_const_mod.F90
+  bshr_infnan_mod.F90
+  bshr_kind_mod.F90
+  bshr_log_mod.F90
+  bshr_nl_mod.F90
+  bshr_string_mod.F90
+  bshr_mpi_mod.F90
+  bshr_assert_mod.F90
+  bshr_sys_mod.F90
+  bshr_timer_mod.F90
   )
-include_directories(${CMAKE_BINARY_DIR}/src/shr)
+
+
+configure_file(bshr_assert.h bshr_assert.h COPYONLY)
+configure_file(bmpif.h bmpif.h COPYONLY)
+configure_file(dtypes.h dtypes.h COPYONLY)
+
 include(add_betr_library)
 add_betr_library(betr_util ${BETR_UTIL_SOURCES})
 
