--- a/src/betr/betr_grid/CMakeLists.txt
+++ b/src/betr/betr_grid/CMakeLists.txt
@@ -6,7 +6,7 @@ set(BETR_GRID_SOURCES
   BeTR_pftvarconType.F90
   )
 
-include_directories(${CMAKE_BINARY_DIR}/src/shr)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 
 
