add BeTR_TemperatureType and fixing h2oisotope code
fixed initialization error for offline h2o runs, this
removed the mass balance error in advection. However,
because the offline code does not consider freeze-thaw
change, resulting excessive water loss through advection.
a fix will be attempted for this issue.

Testing: OS X configure, build, test : pass
         standalone-mock : runs to completion, no numerical diffs
         clm-mock : runs to completion, no numerical diffs
         standaloen-h2osio: running, but fail with negative h2o tracer at day 97.0
         clm-h2oiso: running, but fail with negative h2o tracer at day 97.0

--- a/src/betr/betr_core/CMakeLists.txt
+++ b/src/betr/betr_core/CMakeLists.txt
@@ -5,6 +5,7 @@ set(BETR_CORE_SOURCES
   BeTR_aerocondType.F90
   BeTR_WaterstateType.F90
   BeTR_WaterfluxType.F90
+  BeTR_TemperatureType.F90
   KineticsMod.F90
   TracerBoundaryCondType.F90
   TracerCoeffType.F90
