resort betr data types into betr_dtype
removed betr dependence on clm_varctl and did some
directory reorganization.

Testing: OS X configure, build, test : pass
         standalone-mock : runs to completion, no numerical diffs
         clm-mock : runs to completion, no numerical diffs
         standaloen-h2osio: running, but fail with negative h2o tracer at day 97.0
         clm-h2oiso: running, but fail with negative h2o tracer at day 97.0

--- a/src/betr/betr_core/CMakeLists.txt
+++ b/src/betr/betr_core/CMakeLists.txt
@@ -1,15 +1,4 @@
 set(BETR_CORE_SOURCES
-  BeTR_CNStateType.F90
-  BeTR_CarbonFluxType.F90
-  BeTR_aerocondType.F90
-  BeTR_WaterstateType.F90
-  BeTR_WaterfluxType.F90
-  BeTR_TemperatureType.F90
-  BeTR_SoilHydrologyType.F90
-  BeTR_atm2lndType.F90
-  BeTR_CanopyStateType.F90
-  BeTR_ChemStateType.F90
-  BeTR_SoilStateType.F90
   BeTRTracerType.F90
   KineticsMod.F90
   TracerBoundaryCondType.F90
@@ -25,6 +14,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
 
 include(add_betr_library)
 add_betr_library(betr_core ${BETR_CORE_SOURCES})
