--- a/src/betr/betr_main/CMakeLists.txt
+++ b/src/betr/betr_main/CMakeLists.txt
@@ -7,9 +7,11 @@ set(BETR_MAIN_SOURCES
 
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
-include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
-include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+
 
 
 include(add_betr_library)
