reduced the lenght of some subroutine interface
added baortutils to betr_utils. I also try to
shrink the size of calling interface for some subroutines in betrtype.
The principle is to keep tracer related types not passed through
the arguments.

it seems there might be a glitch in gas pressure profile calculation, which
leads to some small differences in predicted fraction as gas for each
volatile tracer.

Testing: OS X configure, build, test : pass
         standalone-mock : runs to completion, no diffs in tracer profile
         clm-mock : runs to completion, no numerical diffs in tracer profile
         standaloen-h2osio: running, but fail with negative h2o tracer at day 97.0
         clm-h2oiso: running, but fail with negative h2o tracer at day 97.0

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -3,6 +3,7 @@ set(BETR_DRIVER_SOURCES
   BeTRSimulationFactory.F90
   BeTRSimulationStandalone.F90
   BeTRSimulationCLM.F90
+  BeTRSimulationALM.F90
   CLMForcType.F90
   sbetrDriverMod.F90
   )
