--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -3,7 +3,7 @@ general = 1.0e-16 absolute
 concentration = 1.0e-16 absolute
 velocity = 1.0e-16 absolute
 
-[mock]
+[mock-adr]
 timeout = 120 seconds
 
 [h2oiso]
