test coverage for regression test driver
Get the python code coverage tool working with to analyze the regression
test driver and meta-tests. Add's a make rule for test-coverage and
coverage configuration file. Update tests and regression test driver to
ignore some lines during coverage. Get expected failures working with
python unittest. Tweak command line processing so unit tests and
regression tests work.

Testing: os x gfortran - configure, build - pass
         unit tests - pass
         regression tests - pass
         meta-tests/coverage - pass

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,15 @@ build/
 *.bak
 *.regression
 
+# python coverage output
+.coverage
+coverage-html
+
+# python virtual environments
+env/
+env2/
+env3/
+
 # simulation output
 *.output.nc
 
