enable advection and difussion only mock run
Now the code can run in diffusion only or advection only mode

Testing: os x gfortran - configure and build
         unit tests - pass
         regression tests - h2oiso exceeded time threshold, otherwise ok.
         meta tests - pass

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -4,6 +4,7 @@ set(BETR_UTIL_SOURCES
   BeTR_decompMod.F90
   betr_varcon.F90
   betr_ctrl.F90
+  betr_time_manager.F90
   bshr_const_mod.F90
   bshr_infnan_mod.F90
   bshr_kind_mod.F90
