Add mock-advection regression test
Add the mock-advection test to the standalone suite. gas pressure
differences just between runs were large enough that changing the
concentration tolerance was uncomfortably large. Instead added a data
category for pressure. Update baseline files for h2oiso and mock-adr
using the new pressure category for gases. No numerical diffs. There is
probably a data initialization bug that is causing the numerical diffs
in gas pressure between runs with the same executable.

Testing: os x gfortran - configure and build
         unit tests - pass
         regression tests - pass
         meta tests - pass

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -6,6 +6,10 @@ velocity = 1.0e-16 absolute
 [mock-adr]
 timeout = 120 seconds
 
+[mock-advection]
+timeout = 60 seconds
+pressure = 2.0e-14 absolute
+
 [h2oiso]
 timeout = 120 seconds
 concentration = 5.0e-13 relative
