suppress all compiler warnings in clm directories
We don't want to make extensive changes to the clm stub code, but there
are significant numbers of compiler warnings in that code. Suppress all
compiler warnings in code we don't intended to change. But keep the
compiler warnings in the betr code base.

Testing: configure and build - os x, gfortran 5.3.0
         unit tests - pass
         regression tests - pass
         meta tests - pass

--- a/src/stub_clm/CMakeLists.txt
+++ b/src/stub_clm/CMakeLists.txt
@@ -57,6 +57,8 @@ include_directories(${CMAKE_BINARY_DIR}/src/esmf_wrf_timemgr)
 include(add_betr_library)
 add_betr_library(betr_stub_clm ${BETR_STUB_CLM_SOURCES})
 
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -w")
+
 set(BETR_LIBRARIES betr_stub_clm;${BETR_LIBRARIES} PARENT_SCOPE)
 set(BETR_LIBRARIES betr_stub_clm;${BETR_LIBRARIES})
 
