Refactor forcing data
Refactor the forcing data class to prepare for polymorphism and
different formats of forcing data.

Testing: configure and build - os x gfortran 5.3.0
         unit tests - pass
         regression tests - pass
         meta tests - pass

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -4,7 +4,7 @@ set(BETR_DRIVER_SOURCES
   BeTRSimulationStandalone.F90
   BeTRSimulationCLM.F90
   BeTRSimulationALM.F90
-  CLMForcType.F90
+  ForcingDataType.F90
   sbetrDriverMod.F90
   )
 
