Add steady state forcing data functionality
Add the functionality to use steady state forcing data by reading
namelist setting. Move the update forcing function into the forcing data
class. Add infiltration and discharge access methods. Update forcing,
infiltration and discharge all check steady state vs transient and
access the appropriate data.

Testing: configure and build - os x gfortran 5.3.0
         unit tests - pass
         regression tests - pass
         meta tests - pass

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -13,3 +13,6 @@ pressure = 2.0e-14 absolute
 [h2oiso]
 timeout = 120 seconds
 concentration = 5.0e-13 relative
+
+[mock-ss-advection]
+timeout = 90 seconds
