Fix cmake lists for case sensitive file systems
Testing: configure yellowstone cmake 2.8.12.x. Other configure build
         problems still present.

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -15,7 +15,7 @@ set(BETR_UTIL_SOURCES
   bshr_assert_mod.F90
   bshr_sys_mod.F90
   bshr_timer_mod.F90
-  BeTR_time_mod.F90
+  betr_time_mod.F90
   betr_regression_mod.F90
   betr_utils.F90
   )
