--- a/src/betr/betr_dtype/CMakeLists.txt
+++ b/src/betr/betr_dtype/CMakeLists.txt
@@ -2,8 +2,8 @@ set(BETR_DTYPE_SOURCES
   BeTR_CNStateType.F90
   BeTR_CarbonFluxType.F90
   BeTR_aerocondType.F90
-  BeTR_WaterstateType.F90
-  BeTR_WaterfluxType.F90
+  BeTR_WaterStateType.F90
+  BeTR_WaterFluxType.F90
   BeTR_TemperatureType.F90
   BeTR_SoilHydrologyType.F90
   BeTR_atm2lndType.F90
