--- a/src/betr/betr_util/tests/CMakeLists.txt
+++ b/src/betr/betr_util/tests/CMakeLists.txt
@@ -7,5 +7,8 @@ set(BETR_UTILS_INCLUDE_DIRS
   src/betr/betr_util
   )
 
+# turn off compiler warning because we don't have control of pfunit preprocessor
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wno-use-without-only -Wno-unused-dummy-argument -Wno-error=use-without-only")
+
 include(add_betr_pfunit_test)
 add_betr_pfunit_test(test_betr_utils ${BETR_UTILS_TESTS} ${BETR_UTILS_INCLUDE_DIRS})
