--- a/src/betr/betr_core/tests/CMakeLists.txt
+++ b/src/betr/betr_core/tests/CMakeLists.txt
@@ -12,5 +12,8 @@ set(BETR_CORE_INCLUDE_DIRS
   src/betr/betr_core
   )
 
+# turn off compiler warning because we don't have control of pfunit preprocessor
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wno-use-without-only -Wno-unused-dummy-argument")
+
 include(add_betr_pfunit_test)
 add_betr_pfunit_test(test_betr_core ${BETR_CORE_TESTS} ${BETR_CORE_INCLUDE_DIRS})
