--- a/src/betr/betr_math/tests/CMakeLists.txt
+++ b/src/betr/betr_math/tests/CMakeLists.txt
@@ -8,5 +8,8 @@ set(BETR_MATH_INCLUDE_DIRS
   src/betr/betr_math
   )
 
+# turn off compiler warning because we don't have control of pfunit preprocessor
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wno-use-without-only -Wno-unused-dummy-argument -Wno-error=use-without-only")
+
 include(add_betr_pfunit_test)
 add_betr_pfunit_test(test_betr_mathfunc ${BETR_MATH_TESTS} ${BETR_MATH_INCLUDE_DIRS})
