Convert regression test input files
We store regression test input data in netcdf plain text cdl format
instead of binary netcdf. Try to automatically convert the files to
binary with a system call to ncgen.

Testing: configure and build - os x gfortran 5.3.0
         unit tests - pass
         regression tests - consistently failing tolerances in
             mock-ss-advection. Input related? Others pass.
         meta tests - pass

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,11 @@ build/
 *.mod
 *.o
 
+# test input
+# NOTE(bja, 201604) input is stored in git as plain text cdl files,
+# not binary nc!
+regression-tests/input-data/*.nc
+
 # test output
 *.testlog
 *.stdout
