--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -1,18 +1,17 @@
 [default_tolerances]
-general = 1.0e-16 absolute
 concentration = 1.0e-16 absolute
-velocity = 1.0e-16 absolute
+pressure = 1.0e-16 absolute
 
 [mock-adr]
-timeout = 120 seconds
+timeout = 15 seconds
 
 [mock-advection]
-timeout = 60 seconds
+timeout = 15 seconds
 pressure = 2.0e-14 absolute
 
 [h2oiso]
-timeout = 120 seconds
+timeout = 15 seconds
 concentration = 5.0e-13 relative
 
 [mock-ss-advection]
-timeout = 90 seconds
+timeout = 15 seconds
