Improve regression test input data conversion
Improve the conversion of regression test input from text cdl to binary
nc files. Look at the modification time on the file system to determine
if the cdl file is newer and the nc file needs to be updated. Write
conversion info to log file. Generate filenames by appending '.nc' to
the end of the filename. Make clobber rule to remove all test artifacts.

Testing:
    configure and build - os x, gfortran 5.3.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/regression-tests/Makefile
+++ b/regression-tests/Makefile
@@ -31,10 +31,17 @@ test-coverage : FORCE
 	@echo '    coverage-html/index.html'
 
 clean : FORCE
-	-rm *~
+	-find . -name '*~' -print0 | xargs -0 rm
 
+
+# try to remove all generated files. Note, these globs should be as
+# specific as possible to avoid removing unintended files!
 clobber : clean
-	-rm input-data/*.nc input-data/*~
+	-find . -name '*.cdl.nc' -print0 | xargs -0 rm
+	-find . -name '*.output.nc' -print0 | xargs -0 rm
+	-find . -name '*.bak' -print0 | xargs -0 rm
+	-find . -name '*.stdout' -print0 | xargs -0 rm
+	-find . -name '*.regression' -print0 | xargs -0 rm
 
 
 FORCE : 
