Runtime configurable betr grid
Setup of the betr grid is runtime configurable. Can select: reading from
a data set, clm exponential, or uniform grid. Move grid code into it's
own class. I theory this should have been a bit for bit refactor for the
 existing tests. But it introduced slight numerical differences in the
last two significant figures for several tests. Given the rats nest of
globals and grid being set in multiple places, just updating the
baselines at this point. New uniform grid test.

Testing:
    configure and build - OS X, gfortran 5.3.0
    unit tests - pass
    regression tests - pass, new baselines
    meta tests - pass

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -5,6 +5,7 @@ set(BETR_DRIVER_SOURCES
   BeTRSimulationCLM.F90
   BeTRSimulationALM.F90
   ForcingDataType.F90
+  GridMod.F90
   sbetrDriverMod.F90
   )
 
