Cleanup uniform steady state grid forcing file
Make porosity and bsw parameters uniform in the uniform steady state
grid file. Remove unused variables from grid file to reduce confusion
about what is being used. Update reaction and diffusion input files.
Update baseline for ss-uniform-advection (now truly uniform soil
properties).

Testing:
    configure and build - os x, gfortran 5.3.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -9,10 +9,11 @@ timeout = 15 seconds
 timeout = 15 seconds
 pressure = 2.0e-14 absolute
 
-[mock-diffusion]
-timeout = 30 seconds
+#[mock-diffusion]
+#timeout = 15 seconds
 
 [mock-reaction]
+timeout = 15 seconds
 
 [h2oiso]
 timeout = 15 seconds
