Executable for regression test more portable
Make the executable for the regression tests a bit more portable by
setting a default install path for sbert. Use the default path in the
testing. Still need something more generic like out of source tests or
a make include file that contains the actual install path.

Testing:
    configure and build - os x, gfortran 5.3.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/regression-tests/Makefile
+++ b/regression-tests/Makefile
@@ -1,4 +1,6 @@
-SBETR = ../build/Darwin-x86_64-static-double-cc-Debug/src/driver/sbetr
+# FIXME(bja, 201604) need to stop using a hard coded path. Maybe
+# switch to some sort of cmake-ified out of source tests.
+SBETR = ../local/bin/sbetr
 
 RTEST = ./rtest_betr.py
 RTEST_ARGS = --backtrace
