--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -35,7 +35,7 @@ add_betr_executable(sbetr sbetr.F90)
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS betr_driver DESTINATION lib)
-  file(GLOB HEADERS *.h)
+  install(TARGETS sbetr DESTINATION bin)
+  file(GLOB HEADERS *.mod)
   install(FILES ${HEADERS} DESTINATION include/betr/driver)
 endif()
