switch on diffusion regression test
  modified the input data uniform_steadystate_forcing.cdl for turnning on
diffusion test. This called for rewritting the baseline files.
  configure and build - os x, gfortran 6.0.0
         unit tests - pass
         regression tests - pass
         meta-tests - pass

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -9,8 +9,13 @@ timeout = 15 seconds
 timeout = 15 seconds
 pressure = 2.0e-14 absolute
 
-#[mock-diffusion]
-#timeout = 15 seconds
+[mock-ss-diffusion]
+timeout = 15 seconds
+pressure = 2.0e-14 absolute
+
+[mock-ss-uniform-diffusion]
+timeout = 15 seconds
+pressure = 2.0e-14 absolute
 
 [mock-reaction]
 timeout = 35 seconds
