consoliddate input datatype into one  this (almost) consolidated the input data into betr_biogeophys_input_type,  betr_biogeo_flux_type and betr_biogeo_state_type. It avoids the  potential blow up in calling interface in future improvements  Also fixed a memory bug.
testing:
    configure and build - os x, gfortran 6.0.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/src/betr/betr_dtype/CMakeLists.txt
+++ b/src/betr/betr_dtype/CMakeLists.txt
@@ -10,7 +10,11 @@ set(BETR_DTYPE_SOURCES
   BeTR_CanopyStateType.F90
   BeTR_ChemStateType.F90
   BeTR_SoilStateType.F90
+  BeTR_biogeophysInputType.F90
+  BeTR_biogeoStateType.F90
+  BeTR_biogeoFluxType.F90
   )
+
 
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 
