switched on advective flux diagnosis   I now replaced the calc_adv with diagnose_advect_water_flux in betr, and plugged it in the simulation type. I also fixed some bug in calc_adv. The bug is of some inconsistency, although does not affect diffusion or model executation.   Because now the advective flux is different, cases using transient input data produce different results than before. So I updated the baseline for cases involving advection. Also the mock-diffusion test is now on.
testing:
    configure and build - os x, gfortran 6.0.0
    unit tests - pass
    regression tests - passed after updating some of the baseline
    meta tests - pass

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -9,6 +9,10 @@ timeout = 15 seconds
 timeout = 15 seconds
 pressure = 2.0e-14 absolute
 
+[mock-diffusion]
+timeout = 15 seconds
+pressure = 2.0e-14 absolute
+
 [mock-ss-diffusion]
 timeout = 15 seconds
 pressure = 2.0e-14 absolute
