added option for user defined Applications
This introduced the directory Applications with the factory to
create user defined cases. For this to work, the betrtype is now
lifted to driver folder. For customized uses, one could add
new cases under the directory Applications, and modify accordingly
in the CMakeLists.txt

testing:
    configure and build - os x, gfortran 6.0.0
    unit tests - pass
    regression tests - passed after updating some of the baseline
    meta tests - pass

--- a/src/betr/betr_core/CMakeLists.txt
+++ b/src/betr/betr_core/CMakeLists.txt
@@ -8,6 +8,8 @@ set(BETR_CORE_SOURCES
   TracerStateType.F90
   Tracer_varcon.F90
   TransportMod.F90
+  BGCReactionsMod.F90
+  PlantSoilBGCMod.F90
   )
 
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
