--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ add_subdirectory(shr)
 add_subdirectory(esmf_wrf_timemgr)
 add_subdirectory(stub_clm)
 add_subdirectory(betr)
+add_subdirectory(Applications)
 add_subdirectory(driver)
-
