Print pfunit config logs if error.
Print the pfunit configuration logs to the screen if an error occurs.

Testing:
    configure and build - OS X, gfortran 5.3
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -31,6 +31,8 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
 
   if (NOT stat EQUAL 0)
     file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/pfunit_config_errors.log ${pfunit_config_err})
+    message(${pfunit_config_log})
+    message(${pfunit_config_err})
     message(FATAL_ERROR "Configuration of pfunit library failed.")
   endif()
 
