--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ addons:
       - cmake
 
 
-before_script:
-  - . ./compilers.sh; make config debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} travis=1
+#before_script:
+#  - . ./compilers.sh; make config debug=$DEBUG CC=${CC} CXX=${CXX} FC=${FC} travis=1
 
 
 script: 
